separates boards and games in its owns packages
also, configures simple EndPoint to start creating games.